--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
+    "resend": "^4.2.0",
     "sass": "^1.86.1"
   },
   "devDependencies": {
